# transformnd

./: .gitignore  Makefile  README.md  base.html  graph.html  index.html  justfile  prek.toml  pyproject.toml  requirements.txt  setup.py  util.html  version.html
.github/workflows/: ci.yaml  docs.yaml
adapters/: base.html  index.html  meshio.html  pandas.html  pd.html  shapely.html
bench/: conftest.py  test_affine.py
docs/: index.html
examples/: requirements.txt  tutorial.ipynb  tutorial.py
src/transformnd/: __init__.py  base.py  graph.py  util.py  version.py
src/transformnd/adapters/: __init__.py  base.py  bounding_box.py  pandas.py  polars.py  shapely.py
src/transformnd/extents/: base.py  bounding_box.py
src/transformnd/transforms/: __init__.py  affine.py  bijection.py  byDimension.py  by_dimension.py  map_axis.py  moving_least_squares.py  reflection.py  simple.py  thinplate.py
tests/: common.py  conftest.py  test_affine.py  test_base.py  test_simple.py  test_transformnd.py  test_util.py
tests/adapters/: test_bounding_box.py  test_pandas.py  test_polars.py
tests/extents/: test_bounding_box.py
tests/transforms/: test_affine.py  test_bijection.py  test_bijections.py  test_byDimension.py  test_by_dimension.py  test_map_axis.py  test_simple.py
transformnd/: __init__.py  affine.py  base.py  graph.py  moving_least_squares.py  reflection.py  simple.py  thinplate.py  util.py
transformnd/adapters/: __init__.py  base.py  meshio.py  pandas.py  pd.py  shapely.py
transformnd/transforms/: __init__.py  affine.py  moving_least_squares.py  reflection.py  simple.py  thinplate.py
transforms/: affine.html  index.html  moving_least_squares.html  reflection.html  simple.html  thinplate.html
