[project]
name = "transformnd"
version = "0.1.0"
description = "ND coordinate transformations"
readme = "README.md"
authors = [
    { name = "Chris Barnes", email = "chris.barnes@gerbi-gmb.de" }
]
requires-python = ">=3.12, <4.0"
dependencies = [
    "numpy>=2",
    "networkx>=3"
]
license = "MIT"

[project.optional-dependencies]
thinplatesplines = [
    "morphops>=0.1.13",
    "scipy>=1.17.1",
]
movingleastsquares = [
    "molesq>=0.4.0",
]
pandas = [
    "pandas>=3.0.2",
]
shapely = [
    "shapely>=2.1.2",
]

[dependency-groups]
dev = [
    {include-group = "test"},
    {include-group = "lint"},
]
test = ["pytest"]
lint = ["ruff", "mypy"]

[build-system]
requires = ["uv_build>=0.9.8,<0.10.0"]
build-backend = "uv_build"

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
